# lean-spec

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS-MIGRATION.md  LEANSPEC_TEMPLATE.md  Makefile  README.md  VERIFICATION-SPECS-169-170.md  VERIFICATION-SUMMARY.md  lean-spec.code-workspace  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  scripts.md  skills-lock.json  test-integration.sh  tsup.config.ts  turbo.json  vercel.json  vitest.config.ts
.claude/: skills
.github/: skills
.husky/: pre-commit  pre-push
.lean-spec/: config.json
.lspec/: config.json
docker/: Dockerfile  README.md  docker-compose.yml
docs/: COMPARISONS.md  MCP-SERVER.md  README.md  cloud-sync-bridge.md  contributing.md  dev-publish-quick-reference.md  index.md  npm-distribution.md  test-strategy.md
docs-site/: CONTRIBUTING.md  docusaurus.config.ts  package.json  sidebars.ts  turbo.json
examples/: README.md  integration-merge-example.md
rust/: Cargo.toml
rust/leanspec-cli/: Cargo.toml
rust/leanspec-cli/src/: cli_args.rs  main.rs
rust/leanspec-cli/src/commands/: agent.rs  analyze.rs  archive.rs  backfill.rs  board.rs  capabilities.rs  check.rs  children.rs  compact.rs  create.rs  deprecation.rs  deps.rs  examples.rs  files.rs  gantt.rs  init.rs  link.rs  list.rs  mcp.rs  migrate.rs  migrate_archived.rs  mod.rs  open.rs  rel.rs  render.rs  runner.rs  search.rs  session.rs  skill.rs  split.rs  stats.rs  templates.rs  timeline.rs  tokens.rs  ui.rs  unlink.rs  update.rs  validate.rs  view.rs
rust/leanspec-cli/src/commands/init/: ai_tools.rs  mcp_config.rs  opencode_config.rs  skills.rs
rust/leanspec-cli/src/commands/tui/: app.rs  board.rs  keybindings.rs  mod.rs  projects.rs  theme.rs
rust/leanspec-cli/templates/: AGENTS-with-skill.md
rust/leanspec-cli/tests/: archive.rs  board.rs  create.rs  create_template.rs  deps.rs  init.rs  link.rs  list.rs  regression.rs  search.rs  session.rs  spec_lifecycle.rs  stats.rs  tokens.rs  tui_e2e.rs  update.rs  validate.rs  view.rs
rust/leanspec-cli/tests/common/: mod.rs
rust/leanspec-core/: Cargo.toml
rust/leanspec-core/src/: error.rs  lib.rs  model.rs  relationships.rs  search.rs
rust/leanspec-core/src/adapters/: ado.rs  markdown.rs  mod.rs  registry.rs  test_harness.rs
rust/leanspec-core/src/adapters/github/: mod.rs
rust/leanspec-core/src/adapters/jira/: adapter.rs  adf.rs  mod.rs
rust/leanspec-core/src/adapters/markdown/: graph.rs  loader.rs  mod.rs  writer.rs
rust/leanspec-core/src/ai/: manager.rs  mod.rs  protocol.rs  worker.rs
rust/leanspec-core/src/ai_native/: README.md  chat.rs  error.rs  mod.rs  providers.rs  runner_config.rs  streaming.rs  types.rs
rust/leanspec-core/src/ai_native/tools/: helpers.rs  inputs.rs  mod.rs  registry.rs
rust/leanspec-core/src/compute/: insights.rs  stats.rs  tokens.rs
rust/leanspec-core/src/db/: mod.rs
rust/leanspec-core/src/io/: discovery.rs  hash.rs  templates.rs
rust/leanspec-core/src/models_registry/: bridge.rs  bundled_models.json  cache.rs  client.rs  mod.rs
rust/leanspec-core/src/parsers/: frontmatter.rs  mod.rs
rust/leanspec-core/src/providers/: ado.rs  github.rs  markdown.rs  mod.rs  registry.rs
rust/leanspec-core/src/search/: mod.rs
rust/leanspec-core/src/sessions/: adapter.rs  database.rs  manager.rs  mod.rs  runner.rs  types.rs  worktree.rs
rust/leanspec-core/src/sessions/manager/: control.rs  legacy.rs  lifecycle.rs  mod.rs  queries.rs
rust/leanspec-core/src/spec_ops/: archiver.rs  content.rs  graph.rs  loader.rs  writer.rs
rust/leanspec-core/src/storage/: chat_config.rs  chat_store.rs  config.rs  mod.rs  project_registry.rs
rust/leanspec-core/src/types/: config.rs  mod.rs  spec.rs  validation.rs
rust/leanspec-core/src/utils/: content_ops.rs  dependency_graph.rs  hash.rs  insights.rs  mod.rs  spec_archiver.rs  spec_loader.rs  spec_writer.rs  stats.rs  template_loader.rs  token_counter.rs
rust/leanspec-core/src/validators/: completion.rs  frontmatter.rs  line_count.rs  mod.rs  structure.rs  token_count.rs
rust/leanspec-http/: Cargo.toml
rust/leanspec-http/src/: adapter_resolution.rs  chat_config.rs  chat_store.rs  config.rs  error.rs  lib.rs  main.rs  project_registry.rs  routes.rs  state.rs  sync_state.rs  types.rs  watcher.rs
rust/leanspec-http/src/ai/: manager.rs  mod.rs  protocol.rs  worker.rs
rust/leanspec-http/src/handlers/: adapter.rs  capabilities.rs  chat.rs  chat_config.rs  chat_handler.rs  chat_sessions.rs  context.rs  events.rs  files.rs  health.rs  local_projects.rs  mod.rs  models_registry.rs  projects.rs  sessions.rs  specs.rs  sync.rs
rust/leanspec-http/src/handlers/sessions/: legacy.rs  mod.rs  runners.rs  sessions.rs
rust/leanspec-http/src/handlers/specs/: compute.rs  helpers.rs  legacy.rs  mod.rs  read.rs  write.rs
rust/leanspec-http/src/sessions/: adapter.rs  db.rs  manager.rs  mod.rs  types.rs
rust/leanspec-http/src/types/: common.rs  legacy.rs  mod.rs  runners.rs  sessions.rs  specs.rs
rust/leanspec-http/tests/: deps_test.rs  error_handling_test.rs  export_bindings.rs  integration_tests.rs  projects_test.rs  scenarios_test.rs  schema_test.rs  search_test.rs  server_integration_test.rs  specs_test.rs  stats_test.rs  validate_test.rs
rust/leanspec-http/tests/common/: fixtures.rs  mod.rs
rust/leanspec-mcp/: Cargo.toml
rust/leanspec-mcp/src/: lib.rs  main.rs  protocol.rs  tools.rs
rust/leanspec-mcp/src/tools/: board.rs  helpers.rs  mod.rs  relationships.rs  specs.rs  validation.rs
rust/leanspec-mcp/tests/: mcp_tests.rs
rust/leanspec-mcp/tests/helpers/: mod.rs
rust/leanspec-mcp/tests/integration/: e2e.rs  mod.rs  workflows.rs
rust/leanspec-mcp/tests/protocol/: errors.rs  handshake.rs  json_rpc.rs  mod.rs
rust/leanspec-mcp/tests/tools/: board.rs  create.rs  deps.rs  link.rs  list.rs  mod.rs  search.rs  stats.rs  tokens.rs  unlink.rs  update.rs  validate.rs  view.rs
rust/leanspec-sync-bridge/: Cargo.toml
rust/leanspec-sync-bridge/src/: main.rs
schemas/: runners.json
scripts/: README-TEMPLATE-ENGINE.md  (+20 more)
(+703 files in other folders)
