[package]
authors.workspace = true
description = "Core library for LeanSpec - tool-agnostic spec framework with provider-based backends"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "leanspec-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "leanspec_core"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
petgraph.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tiktoken-rs.workspace = true
ts-rs = {version = "10.1", features = ["chrono-impl", "no-serde-warnings"]}
walkdir.workspace = true

# Optional dependencies for infrastructure features
dirs = {version = "5.0", optional = true}
tempfile = {version = "3.14", optional = true}
tokio = {workspace = true, optional = true}
uuid = {version = "1.10", features = ["v4"], optional = true}

[target.'cfg(unix)'.dependencies]
nix = {version = "0.28", default-features = false, features = ["signal"]}

[features]
default = []
full = ["storage", "git"]
git = ["tempfile"]
storage = ["tokio", "dirs", "uuid"]

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
